[package]
name = "flutter-winit"
version = "0.4.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Flutter engine embedder using winit."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
copypasta = "0.7.1"
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-plugins = { path = "../flutter-plugins" }
gl = "0.14.0"
locale_config = "0.3"
log = "0.4"
parking_lot = "0.11"
